--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
             rel="stylesheet"
         />
-        <title>Elephant vs Lion App</title>
+        <title>Nangka vs Sirih</title>
     </head>
     <body>
         <section
@@ -52,7 +52,7 @@
                     "
                 >
                     <p class="text-center">
-                        Masukkan gambar gajah atau singa
+                        Masukkan gambar Nangka atau Sirih
                     </p>
                 </div>
                 {% endif %} {% if prediction %}
